# internal/app/http/routes.go
@@ -1,14 +1,13 @@
 package http_app
 
 import (
-	"auth/internal/user/handlers"
-
+	http_handlers "auth/internal/auth/presentation/handlers/http"
 	"github.com/gin-gonic/gin"
 	swaggerFiles "github.com/swaggo/files"
 	ginSwagger "github.com/swaggo/gin-swagger"
 )
 
-func InitRoutes(router gin.IRoutes, userHandler *handlers.AuthHandler) {
+func InitRoutes(router gin.IRoutes, userHandler *http_handlers.AuthHandler) {
 	router.POST("/auth/register", userHandler.Register)
 	router.POST("/auth/login", userHandler.Login)
 	router.POST("/auth/refresh", userHandler.Refresh)
