# internal/auth/presentation/handlers/http/login.go
@@ -1,23 +1,11 @@
-package handlers
+package http_handlers
 
 import (
+	"log/slog"
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
-
-// Login @Summary User login
-// @Description Logs in a user using their user_id query parameter and returns an access token and refresh token.
-// @ID login-user
-// @Accept  json
-// @Produce  json
-// @Param user_id query string true "User ID"
-// @Param requestBody body LoginRequest true "User login details"
-// @Success 200 {object} LoginResponse "Successful login"
-// @Failure 400 {string} string "Bad Request - missing or invalid user_id"
-// @Failure 404 {string} string "Not Found - user not found"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /auth/login [post]
 
 type LoginRequest struct {
 	Username string `json:"username"`
@@ -29,12 +17,24 @@ type LoginResponse struct {
 	RefreshToken string `json:"refresh_token"`
 }
 
+// Login @Summary User login
+// @Description Login user with username and password
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param login body LoginRequest true "Login Request"
+// @Success 200 {object} LoginResponse
+// @Failure 400 {string} string "Bad Request"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /auth/login [post]
 func (h *AuthHandler) Login(c *gin.Context) {
 	var request LoginRequest
 	if err := c.ShouldBindJSON(&request); err != nil {
 		c.String(http.StatusBadRequest, err.Error())
 		return
 	}
+
+	slog.Debug("logging", slog.Any("request", request))
 
 	at, rt, err := h.userService.Login(c.Request.Context(), request.Username, request.Password)
 	if err != nil {
