# internal/auth/presentation/handlers/http/register.go
@@ -1,21 +1,10 @@
-package handlers
+package http_handlers
 
 import (
 	"net/http"
 
 	"github.com/gin-gonic/gin"
 )
-
-// Register @Summary Register a new user
-// @Description Registers a new user by providing an email address and other necessary information.
-// @ID register-user
-// @Accept  json
-// @Produce  json
-// @Param requestBody body RegisterRequest true "User registration details"
-// @Success 200 {object} RegisterResponse "Successfully registered new user"
-// @Failure 400 {string} string "Bad Request - invalid input"
-// @Failure 500 {string} string "Internal Server Error"
-// @Router /auth/register [post]
 
 type RegisterRequest struct {
 	Username string `json:"username"`
@@ -26,6 +15,16 @@ type RegisterResponse struct {
 	User
 }
 
+// Register @Summary User registration
+// @Description Registers a new user with username and password
+// @Tags auth
+// @Accept json
+// @Produce json
+// @Param register body RegisterRequest true "Register Request"
+// @Success 200 {object} RegisterResponse
+// @Failure 400 {string} string "Bad Request"
+// @Failure 500 {string} string "Internal Server Error"
+// @Router /auth/register [post]
 func (h *AuthHandler) Register(c *gin.Context) {
 	var request RegisterRequest
 	if err := c.ShouldBindJSON(&request); err != nil {
